refactor: encapsulamento de funcionalidades básicas em mapaHandler

--- a/example/index.html
+++ b/example/index.html
@@ -1157,9 +1157,11 @@
 
 
 
-				<button class="button-action" onclick="mapaControlador.ressaltarGrandeVitoria()">Destacar Grande Vitória</button>
-				<button class="button-action" onclick="mapaControlador.esconderNomes()">Esconder o nome dos municípios</button>
-				<button class="button-action" onclick="mapaControlador.exibirApenasLinhares()">Exibir apenas Linhares</button>
+				<button class="button-action" onclick="destacarGrandeVitoria()">Destacar Grande Vitória</button>
+				<button class="button-action" onclick="esconderTodosOsNomes()">Esconder o nome dos municípios</button>
+				<button class="button-action" onclick="exibirApenasLinhares()">Exibir apenas Linhares</button>
+				<button class="button-action" onclick="customizarColatina()">Customizar Colatina</button>
+				<button class="button-action" onclick="customizarCachoeiro()">Customizar Cachoeiro</button>
 				<button class="button-action button-reset" onclick="window.location.reload();">RESET</button>
 
 			</div>
