mapaHandler - avanços na api

--- a/example/index.html
+++ b/example/index.html
@@ -11,8 +11,6 @@
 	<div class="tela-dividida">
 		<div class="map-container">
 
-
-
 			<!-- SVG - INICIO -->
 			<svg viewBox="0 0 541.418 789.165" enable-background="new 0 0 541.418 789.165" xml:space="preserve">
 			<g id="tracados">
@@ -1155,13 +1153,12 @@
 
 				<p>Através de CSS e Javascript, você pode realizar várias customizações. Clique nos botões abaixo para ver exemplos:</p>
 
-
-
-				<button class="button-action" onclick="destacarGrandeVitoria()">Destacar Grande Vitória</button>
-				<button class="button-action" onclick="esconderTodosOsNomes()">Esconder o nome dos municípios</button>
-				<button class="button-action" onclick="exibirApenasLinhares()">Exibir apenas Linhares</button>
+				<button class="button-action" onclick="destacarGrandeVitoriaInterior()">Destacar Grande Vitória e Interior</button>
 				<button class="button-action" onclick="customizarColatina()">Customizar Colatina</button>
 				<button class="button-action" onclick="customizarCachoeiro()">Customizar Cachoeiro</button>
+				<button class="button-action" onclick="esconderTodosOsNomes()">Esconder o nome dos municípios</button>
+				<button class="button-action" onclick="exibirApenasLinhares()">Exibir apenas Linhares</button>
+
 				<button class="button-action button-reset" onclick="window.location.reload();">RESET</button>
 
 			</div>
