mapaHandler - melhorias de api

--- a/example/index.html
+++ b/example/index.html
@@ -1157,6 +1157,7 @@
 				<button class="button-action" onclick="customizarColatina()">Customizar Colatina</button>
 				<button class="button-action" onclick="customizarCachoeiro()">Customizar Cachoeiro</button>
 				<button class="button-action" onclick="esconderTodosOsNomes()">Esconder o nome dos municípios</button>
+				<button class="button-action" onclick="exibirTodosOsNomes()">Exibir o nome dos municípios</button>
 				<button class="button-action" onclick="exibirApenasLinhares()">Exibir apenas Linhares</button>
 
 				<button class="button-action button-reset" onclick="window.location.reload();">RESET</button>
