alterações de nome e pastas - avanços na documentação

--- a/example/index.html
+++ b/example/index.html
@@ -57,7 +57,7 @@
 		<button class="button-zoom" onclick="zoomControls.zoomReset()">Reset</button>
 	</div>
 
-	<script src="../src/mapaEsHandler.js"></script>
+	<script src="../dist/mapaES.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
