movendo arquivos para /root, para publicação no GitHub Pages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<button class="button-zoom" onclick="zoomControls.zoomReset()">Reset</button>
 	</div>
 
-	<script src="../dist/mapaES.js"></script>
+	<script src="/dist/mapaES.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
