--- a/example/index.html
+++ b/example/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mapaEs - Mapa Interativo - Espírito Santo</title>
+    <title>mapaEs.js - Mapa Interativo - Espírito Santo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>mapaEs - Mapa Interativo do Espírito Santo</h1>
+	<h1>mapaEs.js - Mapa Interativo do Espírito Santo</h1>
 	<div class="tela-dividida">
 		<div class="map-container">
 			<div id="map-holder"></div>
@@ -46,7 +46,7 @@
 		<button class="button-zoom" onclick="zoomControls.zoomReset()">Reset</button>
 	</div>
 
-	<script src="../dist/mapaES.js"></script>
+	<script src="../dist/mapaEs.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
