alterando objeto mapaEs para mapaSvg, para deixa-lo mais abrangente caso novos mapas sejam inseridos no futuro

--- a/example/index.html
+++ b/example/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mapaEs.js - Mapa Interativo - Espírito Santo</title>
+    <title>mapaSvg.js - Mapa Interativo - Espírito Santo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="topbar">mapaEs.js - Mapa Interativo do Espírito Santo</div>
+	<div class="topbar">mapaSvg.js - Mapa Interativo do Espírito Santo</div>
 	<div class="tela-dividida">
 		<div class="map-container">
 			<div id="map-holder"></div>
@@ -55,7 +55,7 @@
 		<button class="button-zoom" id="resetButton">Reset</button>
 	</div>
 
-	<script src="../dist/mapaEs.js"></script>
+	<script src="../dist/mapaSvg.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
