--- a/example/index.html
+++ b/example/index.html
@@ -1,5 +1,5 @@
 <!--
-Copyright (c) 2025 - Luciano Lorencini - disponível em: https://github.com/luclorencini/mapa-es-svg
+Copyright (c) 2025 - Luciano Lorencini - disponível em: https://github.com/luclorencini/mapaSvg.js
 Licenciado sob a Licença MIT. Consulte o arquivo LICENSE para mais detalhes.
  -->
 
@@ -31,7 +31,7 @@ Licenciado sob a Licença MIT. Consulte o arquivo LICENSE para mais detalhes.
 			<div class="destaque">
 				<h4>Fontes e documentação completa em:</h4>
 				<h4>
-					<a target="_blank" href="https://github.com/luclorencini/mapa-es-svg">https://github.com/luclorencini/mapa-es-svg</a>
+					<a target="_blank" href="https://github.com/luclorencini/mapaSvg.js">https://github.com/luclorencini/mapaSvg.js</a>
 				</h4>
 			</div>
 
