reescrita bloco 3 - exemplo com nova customização via css para Linhares

--- a/example/index.html
+++ b/example/index.html
@@ -47,7 +47,7 @@ Licenciado sob a Licença MIT. Consulte o arquivo LICENSE para mais detalhes.
 			<button class="button-action" onclick="customizarCachoeiro()">Customizar Cachoeiro</button>
 			<button class="button-action" onclick="esconderTodosOsNomes()">Esconder o nome dos municípios</button>
 			<button class="button-action" onclick="exibirTodosOsNomes()">Exibir o nome dos municípios</button>
-			<button class="button-action" onclick="exibirApenasLinhares()">Exibir apenas Linhares</button>
+			<button class="button-action" onclick="exibirApenasLinhares()">Exibir só Linhares e destacar com CSS</button>
 
 			<button class="button-action button-reset" onclick="window.location.reload();">RESET</button>
 
