novo método load() no lugar do init()

--- a/example/index.html
+++ b/example/index.html
@@ -14,8 +14,8 @@ Licenciado sob a Licença MIT. Consulte o arquivo LICENSE para mais detalhes.
 <body>
 	<div class="topbar">mapaSvg.js - Mapa Interativo do Espírito Santo</div>
 	<div class="tela-dividida">
-		<div class="map-container">
-			<div id="map-holder"></div>
+		<div class="map-frame">
+			<div id="map-container"></div>
 			<div class="map-tip">
 				<div><strong>Dica:</strong></div>
 				<div>Arraste o mapa para movimentá-lo</div>
